disabled camera api2 for document snapper

--- a/src/android/res/layout/activity_scan_document.xml
+++ b/src/android/res/layout/activity_scan_document.xml
@@ -2,7 +2,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <at.nineyards.anyline.modules.document.DocumentScanView
             android:id="@+id/document_scan_view"
@@ -33,6 +33,7 @@
             android:layout_alignParentTop="true"
             android:visibility="gone"
             tools:visibility="visible"
+            app:api_2_enabled="false"
     >
 
         <TextView
