--- a/plugin/src/windows/css/default.css
+++ b/plugin/src/windows/css/default.css
@@ -1,8 +1,23 @@
-﻿body {
+﻿#anylineRoot{
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: 0 0 black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999;
+    -ms-user-select: none;
+
 }
 
 #videoElement{
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
     z-index: -1;
     top:0;
     bottom: 0;
