--- a/plugin/src/windows/css/anylineCutout.css
+++ b/plugin/src/windows/css/anylineCutout.css
@@ -1,10 +1,10 @@
-﻿#background {
+﻿#anylineBackground {
     position: fixed;
     width: 100%;
     height: 100%;
     align-content: stretch;
 }
 
-#cutout {
+#anylineCutout {
     position: relative;
 }
