--- a/plugin/src/windows/css/anylineDefault.css
+++ b/plugin/src/windows/css/anylineDefault.css
@@ -50,14 +50,20 @@
     transform: translateX(-50%);
 }
 
-#anylineTorchButton{
-    position: fixed;
+#anylineFlashButtonRoot{
+    position:fixed;
+    z-index: 99998;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(182, 255, 0, 0.23);
+}
+
+#anylineFlashButton{
+    position: relative;
     z-index: 99999;
-    bottom: 60px;
     margin: auto;
-    left: 80%;
     font-size: 3em;
     background-color: transparent;
-    border: 0;
+    border: solid;
     color: white;
 }
