--- a/plugin/src/windows/css/anylineDefault.css
+++ b/plugin/src/windows/css/anylineDefault.css
@@ -55,13 +55,12 @@
     z-index: 99998;
     width: 100%;
     height: 100%;
-    background-color: rgba(182, 255, 0, 0.23);
+    background-color: transparent;
 }
 
 #anylineFlashButton{
-    position: relative;
+    position: fixed;
     z-index: 99999;
-    margin: auto;
     font-size: 3em;
     background-color: transparent;
     border: solid;
