--- a/plugin/src/android/res/values/anyline_sdk_plugin_strings.xml
+++ b/plugin/src/android/res/values/anyline_sdk_plugin_strings.xml
@@ -30,4 +30,7 @@
     <string name="document_processing">Processing</string>
     <string name="document_processing_picture_please_wait">Processing the picture. Please wait.</string>
 
+    <string name="scan_document">Scan Document</string>
+
+
 </resources>
