--- a/plugin/src/android/res/layout/cordova_activity_crop_view_ui.xml
+++ b/plugin/src/android/res/layout/cordova_activity_crop_view_ui.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".CropViewUIActivity">
+    android:orientation="vertical">
 
     <io.anyline.view.CropViewUI
         android:id="@+id/crop_document_view_new"
