--- a/plugin/src/android/res/layout/activity_scan.xml
+++ b/plugin/src/android/res/layout/activity_scan.xml
@@ -6,8 +6,7 @@
     <io.anyline2.view.ScanView
         android:id="@+id/scan_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:api_2_enabled="false" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/layout_change_orientation"
